# AzureSphereRemoteX.Client

./: CMakeLists.txt  README.md  comms_manager.c  comms_manager.h  contract.h
HardwareDefinitions/: avnet_mt3620_sk_rev2.json
HardwareDefinitions/inc/hw/: avnet_mt3620_sk_rev2.h
applibs/: adc.h  gpio.h  i2c.h  pwm.h  remotex.h  spi.h  storage.h  uart.h
src/: adc.c  gpio.c  i2c.c  log.c  pwm.c  remotex.c  spi.c  storage.c  uart.c
